--- a/css/project_style.css
+++ b/css/project_style.css
@@ -1,3 +1,6 @@
+.container{
+	overflow: auto;
+}
 .projectlist{
 
 	position: relative;
@@ -8,4 +11,31 @@
 	width:80%;
 	padding: 0px;
 	margin: 0 10%;
+
+}
+.Terrapin_Jumper{
+	position: relative;
+	top:10px;
+	border-radius: 10px;
+	background: #437F5A;
+	font-weight: 900;
+	color: #000000;
+	width: 84%;
+	height: auto;
+	margin: 0% 5%;
+	padding: 3%;
+	font-size: 20px;
+}
+.blind_spot{
+	position: relative;
+	top:75px;
+	border-radius: 10px;
+	background: #437F5A;
+	font-weight: 900;
+	color: #000000;
+	width: 84%;
+	height: auto;
+	margin: 0% 5%;
+	padding: 3%;
+	font-size: 20px;
 }
